--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -740,7 +740,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: #494e52;
+  color: #444;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
   line-height: 1.5;
 }
@@ -798,7 +798,7 @@ p {
 u,
 ins {
   text-decoration: none;
-  border-bottom: 1px solid #494e52;
+  border-bottom: 1px solid #444;
 }
 u a,
 ins a {
@@ -828,7 +828,7 @@ abbr[title],
 abbr[data-original-title] {
   text-decoration: none;
   cursor: help;
-  border-bottom: 1px dotted #494e52;
+  border-bottom: 1px dotted #444;
 }
 
 /* blockquotes */
@@ -901,7 +901,7 @@ hr {
   display: block;
   margin: 1em 0;
   border: 0;
-  border-top: 1px solid #f2f3f3;
+  border-top: 1px solid #ccc;
 }
 
 /* lists */
@@ -965,7 +965,7 @@ figure.third figcaption {
 /* Figure captions */
 figcaption {
   margin-bottom: 0.5em;
-  color: #898c8f;
+  color: #a2a2a2;
   font-family: Georgia, Times, serif;
   font-size: 0.75em;
 }
@@ -1068,7 +1068,7 @@ form legend {
   margin-bottom: 10px;
   *margin-left: -7px;
   padding: 0;
-  color: #494e52;
+  color: #444;
   border: 0;
   white-space: normal;
 }
@@ -1104,7 +1104,7 @@ textarea {
 label {
   display: block;
   margin-bottom: 0.25em;
-  color: #494e52;
+  color: #444;
   cursor: pointer;
 }
 label small {
@@ -1123,9 +1123,9 @@ select {
   width: 100%;
   padding: 0.25em;
   margin-bottom: 0.5em;
-  color: #494e52;
+  color: #444;
   background-color: #fffbfd;
-  border: #f2f3f3;
+  border: #ccc;
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
 }
@@ -1260,7 +1260,7 @@ textarea:focus {
   border-color: #7a8288;
   outline: 0;
   outline: thin dotted \9;
-  box-shadow: inset 0 1px 3px rgba(73, 78, 82, 0.06), 0 0 5px rgba(122, 130, 136, 0.7);
+  box-shadow: inset 0 1px 3px rgba(68, 68, 68, 0.06), 0 0 5px rgba(122, 130, 136, 0.7);
 }
 
 input[type="file"]:focus,
@@ -1275,7 +1275,7 @@ select:focus {
      ========================================================================== */
 .help-block,
 .help-inline {
-  color: #898c8f;
+  color: #a2a2a2;
 }
 
 .help-block {
@@ -1416,7 +1416,7 @@ select:focus {
   color: #000;
   border-width: 2px !important;
   border-style: solid !important;
-  border-color: #f2f3f3;
+  border-color: #ccc;
   border-radius: 4px;
 }
 
@@ -1435,8 +1435,8 @@ table + table {
 }
 
 thead {
-  background-color: #f2f3f3;
-  border-bottom: 2px solid #b6b6b6;
+  background-color: #ccc;
+  border-bottom: 2px solid #999999;
 }
 
 th {
@@ -1447,7 +1447,7 @@ th {
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid #b6b6b6;
+  border-bottom: 1px solid #999999;
 }
 
 tr,
@@ -1524,7 +1524,7 @@ th {
 .btn--inverse {
   background-color: #fff;
   color: #494e52;
-  border: 1px solid #f2f3f3;
+  border: 1px solid #ccc;
 }
 .btn--inverse:hover {
   background-color: #cccccc;
@@ -1964,7 +1964,7 @@ th {
    ========================================================================== */
 .masthead {
   position: relative;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
@@ -2137,8 +2137,8 @@ th {
   line-height: 1.5;
   text-align: center;
   text-decoration: none;
-  color: #898c8f;
-  border: 1px solid #b6b6b6;
+  color: #a2a2a2;
+  border: 1px solid #999999;
   border-radius: 0;
 }
 .pagination li a:hover {
@@ -2149,7 +2149,7 @@ th {
   background: #7a8288;
 }
 .pagination li a.disabled {
-  color: rgba(137, 140, 143, 0.5);
+  color: rgba(162, 162, 162, 0.5);
   pointer-events: none;
   cursor: not-allowed;
 }
@@ -2174,12 +2174,12 @@ th {
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  color: #898c8f;
-  border: 1px solid #b6b6b6;
+  color: #a2a2a2;
+  border: 1px solid #999999;
   border-radius: 4px;
 }
 .pagination--pager:hover {
-  background-color: #898c8f;
+  background-color: #a2a2a2;
   color: #fff;
 }
 .pagination--pager:first-child {
@@ -2192,7 +2192,7 @@ th {
   border-bottom-left-radius: 0;
 }
 .pagination--pager.disabled {
-  color: rgba(137, 140, 143, 0.5);
+  color: rgba(162, 162, 162, 0.5);
   pointer-events: none;
   cursor: not-allowed;
 }
@@ -2204,7 +2204,7 @@ th {
 .page__comments + .pagination {
   margin-top: 2em;
   padding-top: 2em;
-  border-top: 1px solid #f2f3f3;
+  border-top: 1px solid #ccc;
 }
 
 /*
@@ -2282,7 +2282,7 @@ th {
   right: 0;
   margin-top: 15px;
   padding: 5px;
-  border: 1px solid #f2f3f3;
+  border: 1px solid #ccc;
   border-radius: 4px;
   background: #fffbfd;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -2307,7 +2307,7 @@ th {
   width: 0;
   border-style: solid;
   border-width: 0 10px 10px;
-  border-color: #f2f3f3 transparent;
+  border-color: #ccc transparent;
   display: block;
   z-index: 0;
 }
@@ -2325,7 +2325,7 @@ th {
 }
 .greedy-nav .hidden-links li {
   display: block;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 .greedy-nav .hidden-links li:last-child {
   border-bottom: none;
@@ -2486,7 +2486,7 @@ th {
   font-size: 0.75em;
   font-weight: bold;
   text-transform: uppercase;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 
 /*
@@ -2498,7 +2498,7 @@ th {
   text-transform: uppercase;
   letter-spacing: 1px;
   background-color: #fffbfd;
-  border: 1px solid #f2f3f3;
+  border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
 }
@@ -2521,14 +2521,14 @@ th {
 .toc__menu a {
   display: block;
   padding: 0.5rem 1rem;
-  color: #898c8f;
+  color: #a2a2a2;
   font-size: 0.6875em;
   font-weight: bold;
   line-height: 1.5;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 .toc__menu a:hover {
-  color: #494e52;
+  color: #444;
 }
 .toc__menu > li:last-child a {
   border-bottom: none;
@@ -2562,7 +2562,7 @@ th {
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: #898c8f;
+  color: #a2a2a2;
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
@@ -2603,7 +2603,7 @@ th {
 .page__footer .fab,
 .page__footer .far,
 .page__footer .fal {
-  color: #898c8f;
+  color: #a2a2a2;
 }
 
 .page__footer-copyright {
@@ -2645,14 +2645,14 @@ th {
   margin-right: 1rem;
   border: 0;
   outline: none;
-  color: #898c8f;
+  color: #a2a2a2;
   background-color: transparent;
   cursor: pointer;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 .search__toggle:hover {
-  color: #494e52;
+  color: #444;
 }
 
 .search-icon {
@@ -3242,7 +3242,7 @@ body:hover .visually-hidden button {
 .social-icons .fab,
 .social-icons .far,
 .social-icons .fal {
-  color: #494e52;
+  color: #444;
 }
 .social-icons .fa-behance,
 .social-icons .fa-behance-square {
@@ -3443,7 +3443,7 @@ body:hover .visually-hidden button {
   min-height: 0;
   z-index: 9999;
   background: #fff;
-  border: 1px solid #f2f3f3;
+  border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
 }
@@ -3456,7 +3456,7 @@ body:hover .visually-hidden button {
 }
 .modal__actions {
   padding: 0.5em 1em;
-  border-top: 1px solid #f2f3f3;
+  border-top: 1px solid #ccc;
 }
 
 /*
@@ -3608,7 +3608,7 @@ a.reversefootnote:hover {
 }
 .page__content h2 {
   padding-bottom: 0.5em;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 .page__content p,
 .page__content li,
@@ -3745,7 +3745,7 @@ a.reversefootnote:hover {
 .page__share {
   margin-top: 2em;
   padding-top: 1em;
-  border-top: 1px solid #f2f3f3;
+  border-top: 1px solid #ccc;
 }
 @media (max-width: 37.5em) {
   .page__share .btn span, .page__share #goog-wm-sb span {
@@ -3771,7 +3771,7 @@ a.reversefootnote:hover {
    ========================================================================== */
 .page__meta, .comment__date {
   margin-top: 2em;
-  color: #898c8f;
+  color: #a2a2a2;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
   font-size: 0.75em;
 }
@@ -3804,7 +3804,7 @@ a.reversefootnote:hover {
   margin-bottom: 8px;
   padding: 5px 10px;
   text-decoration: none;
-  border: 1px solid #b6b6b6;
+  border: 1px solid #999999;
   border-radius: 4px;
 }
 .page__taxonomy-item:hover {
@@ -3828,7 +3828,7 @@ a.reversefootnote:hover {
   margin-bottom: 10px;
   padding-top: 2rem;
   font-size: 0.75em;
-  border-top: 1px solid #f2f3f3;
+  border-top: 1px solid #ccc;
   text-transform: uppercase;
 }
 
@@ -3857,7 +3857,7 @@ a.reversefootnote:hover {
   display: table;
 }
 .comment:not(:last-child) {
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 
 .comment__avatar-wrapper {
@@ -3882,7 +3882,7 @@ a.reversefootnote:hover {
     width: 80px;
     height: 80px;
     padding: 5px;
-    border: 1px solid #f2f3f3;
+    border: 1px solid #ccc;
   }
 }
 
@@ -3918,7 +3918,7 @@ a.reversefootnote:hover {
   float: left;
   margin-top: 2em;
   padding-top: 1em;
-  border-top: 1px solid #f2f3f3;
+  border-top: 1px solid #ccc;
 }
 .page__related::after {
   clear: both;
@@ -3995,8 +3995,8 @@ a.reversefootnote:hover {
   margin: 1.414em 0 0;
   padding-bottom: 0.5em;
   font-size: 1em;
-  color: #898c8f;
-  border-bottom: 1px solid #f2f3f3;
+  color: #a2a2a2;
+  border-bottom: 1px solid #ccc;
 }
 .archive__subtitle + .list__item .archive__item-title {
   margin-top: 0.5em;
@@ -4141,7 +4141,7 @@ a.reversefootnote:hover {
 .feature__wrapper {
   clear: both;
   margin-bottom: 2em;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 .feature__wrapper::after {
   clear: both;
@@ -4383,7 +4383,7 @@ a.reversefootnote:hover {
 @media (min-width: 64em) {
   .author__avatar img {
     padding: 5px;
-    border: 1px solid #f2f3f3;
+    border: 1px solid #ccc;
   }
 }
 
@@ -4465,7 +4465,7 @@ a.reversefootnote:hover {
   margin-top: 15px;
   padding: 10px;
   list-style-type: none;
-  border: 1px solid #f2f3f3;
+  border: 1px solid #ccc;
   border-radius: 4px;
   background: #fffbfd;
   z-index: -1;
@@ -4495,7 +4495,7 @@ a.reversefootnote:hover {
   width: 0;
   border-style: solid;
   border-width: 0 10px 10px;
-  border-color: #f2f3f3 transparent;
+  border-color: #ccc transparent;
   z-index: 0;
 }
 @media (min-width: 64em) {
@@ -4815,7 +4815,7 @@ a.reversefootnote:hover {
 
 .page__content h2 {
   padding-bottom: 0.5em;
-  border-bottom: 1px solid #f2f3f3;
+  border-bottom: 1px solid #ccc;
 }
 .page__content ul,
 .page__content ol,
